# maple60.github.io

./: .gitignore  .nojekyll  DESCRIPTION  Gemfile  README.md  _config.yml  _quarto.yml  _quarto_internal_scss_error.scss  blog.html  custom.scss  docker-compose.yml  imager.Rmd  index.html  index.llms.md  index.qmd  kamigamo_map.html  list.html  listings.json  llms.txt  map.html  package-lock.json  package.json  postcss.config.js  posts.html  posts.llms.md  posts.qmd  pyproject.toml  r.html  recommendations.html  recommendations.llms.md  recommendations.qmd  requirements.txt  robots.txt  search.json  sitemap.xml  staff.html  tailwind.config.js  works.html  works.llms.md  works.qmd
_data/: list.csv  navigation.yml
_includes/: map.js  navigation.html
_layouts/: default.html  leaflet.html  post.html
_posts/: 2021-08-31-welcome-to-jekyll.markdown  2023-03-06-elliptic-fourier-analysis.md  2024-03-04-color-circle.md  2024-03-05-r-api.md  2024-03-13-plotly_test copy.md  2024-03-13-plotly_test.md  2024-03-14-cumsum.md  2024-06-07-r-matrix.md  2024-06-18-r-vector.md  2024-06-19-bookdown_url.md
_sass/: list.scss  main.scss  map.scss  mvp.scss  spp.scss  syntax_hilight.scss
_site/: about.html  index.html  listings.json  posts.html  search.json  styles.css  styles.scss
assets/js/: 0.js  (+25 more)
docs/: listings.json  posts.html  search.json
en/: index.html  index.llms.md  index.qmd  posts.html  posts.llms.md  posts.qmd  recommendations.html  recommendations.llms.md  recommendations.qmd  works.html  works.llms.md  works.qmd
leaflet_kamigamo/: map.html
posts/: 00_template.qmd  (+26 more)
(+303 files in other folders)
