[project]
name = "maple60-github-io"
version = "0.1.0"
description = "Python environment for rendering the Quarto website."
requires-python = ">=3.12,<3.13"
dependencies = [
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "requests>=2.32",
]

[tool.uv]
package = false
